--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@getbrevo/brevo": "^3.0.1",
     "@types/nodemailer": "^7.0.4",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
